--- a/index.html
+++ b/index.html
@@ -10,7 +10,177 @@
 </head>
 
 <body>
+    <header>
+        <div class="head">
+            <div class="signs">
+                <img src="./media/circ2.png" alt="">
+                <img src="./media/plus.png" alt="">
+                <div class="triangle">
+                    <p></p>
+                </div>
+            </div>
+
+            <div class="navlinks">
+                <a href="#work">WORK</a>
+                <a href="#about">ABOUT</a>
+                <a href="#contact">CONTACT</a>
+            </div>
+        </div>
+        <div class="hello">
+            <h1>Hello, world</h1>
+            <p>I'm Chris Ota, a San Francisco-based product designer working at Lyft. I am passionate about researching
+                problems and solving them through design while providing a pleasant user experience.</p>
+            <div class="email">
+                <a href="resume">Resume</a><a href="email">Email</a>
+            </div>
+        </div>
+        <div class="background"></div>
+    </header>
+
+    <section id="work">
+        <div class="my">
+            <h2>MY WORK</h2>
+            <p></p>
+        </div>
+        <p class="ff">Featured</p>
+
+
+        <div class="feature">
+            <div class="lyft">
+                <div class="left">
+                    <p>Lyft</p>
+                    <p>Led the redesign of our Concierge dispatching tool to assist healthcare riders, standardized
+                        components to be used across our family of Lyft Business products, assisted with interviewing
+                        and hiring committees, and co-chaired internal design mentorship program.</p>
+                    <p>Design, Research</p>
+                </div>
+                <img src="./media/lyft.jpg" alt="">
+            </div>
+
+            <!--  -->
+
+            <div class="lyft">
+                <img src="./media/apple.jpg" alt="">
+                <div class="left apple">
+                    <p>Apple</p>
+                    <p>Designed and built an internal dashboard reporting system for the Apple Maps Engineering team to
+                        display data from other tools used in the organization. Other team contributions included an
+                        internal design system, which assisted engineers with the styling of their applications.</p>
+                    <p>User Experience Documentation, Design, HTML/CSS</p>
+                </div>
+            </div>
+
+
+            <!--  -->
+
+
+            <div class="lyft mall">
+
+                <div class="left mallDesign">
+                    <p>Mall Redesign</p>
+                    <p>A large mall was looking for a redesign to improve the online browsing experience for local and
+                        international visitors.</p>
+                    <p>User Experience Documentation, Design, HTML/CSS</p>
+                    <p>I was involved with creating user-experience documents (touchpoints, site audit, competitor
+                        analysis, sitemaps, responsive wireframes, user personas, customer and stakeholder interviews)
+                        and a mobile-first design approach.</p>
+                    <a href="#caseStudy">View Case Study</a>
+                    <p>User Experience Documentation, Design, HTML/CSS, WordPress Integration</p>
+                </div>
+                <img src="./media/mall.jpg" alt="">
+            </div>
+
+            <!--  -->
+
+
+            <div class="lyft mall">
+                <img src="./media/work-school.jpg" alt="">
+                <div class="left mallDesign">
+                    <p>School Kine Cookies</p>
+                    <p>School Kine Cookies was looking for a custom, backend dashboard system to help teachers manage
+                        local cookie sales in Hawaii. After launching, there was a 98% adoption rate with a steady
+                        increase of sales.</p>
+                    <a href="#caseStudy">View Case Study</a>
+                    <p>Wireframes, Design, HTML/CSS, Ruby on Rails, Shopify Integration</p>
+                </div>
+            </div>
+
+            <!--  -->
+
+
+            <div class="lyft mall">
+                <div class="left mallDesign">
+                    <p>Clearstream.tv</p>
+                    <p>Headquartered in Chicago, Clearstream came to us looking for a custom dashboard reporting system.
+                        Built from the ground up, I worked closely with engineers and stakeholders during many different
+                        steps of the process..</p>
+                    <a href="#caseStudy">View Case Study</a>
+                    <p>Design, HTML/CSS, Ruby on Rails</p>
+                </div>
+                <img src="./media/clearstream.jpg" alt="">
+            </div>
+
+            <!--  -->
+
+
+            <div class="lyft">
+                <img src="./media/resort-img.jpg" alt="">
+                <div class="left apple">
+                    <p>Resort Design</p>
+                    <p>A local hotel and resort chain wanted to refresh the look of their current site and rethink the
+                        user experience when looking for a room. We also worked closely with the client on widening
+                        their appeal to a broader audience by coming up with social media strategies.</p>
+                    <p>Wireframes, Design</p>
+                </div>
+            </div>
+
+
+
+
+            <!--  -->
+
+
+
+
+            <p class="personal">Personal</p>
+            <div class="lyft">
+                <img src="./media/cp-rolex.jpg" alt="">
+                <div class="left mallDesign">
+                    <p>CodePen</p>
+                    <p>I like to test my front-end capabilities in CodePen from time to time. Whether it is illustrating
+                        something in pure CSS or squashing an annoying visual bug, I enjoy the challenge in trying to
+                        accomplish something new.</p>
+                    <a href="#caseStudy">View More</a>
+                    <p>Various</p>
+                </div>
+            </div>
+
+            <!--  -->
+
+
+            <div class="lyft">
+                <div class="left mallDesign">
+                    <p>Things Around SF</p>
+                    <p>Since I am not a San Francisco native, I have become more aware of my surroundings and
+                        environment. To reflect this, I started an illustration series called "Things Around SF". Each
+                        illustration was created for fun in a couple of hours. Enjoy!</p>
+                    <a href="#caseStudy">View on Dribbble</a>
+                    <p>Illustration</p>
+                </div>
+                <div class="pics">
+                    <img src="./media/bicycle.jpg" alt="">
+                    <img src="./media/umbrella.jpg" alt="">
+                    <img src="./media/dog.jpg" alt="">
+                    <img src="./media/glasses.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+    </section>
+
 
 </body>
+
+<!-- https://www.otadesigns.com/ -->
 
 </html>
