--- a/index.html
+++ b/index.html
@@ -174,11 +174,103 @@
                     <img src="./media/glasses.jpg" alt="">
                 </div>
             </div>
-
+        </div>
+        <div class="icons">
+            <img src="./media/logo-apple.svg" alt="">
+            <img src="./media/logo-pimco.svg" alt="">
+            <img src="./media/logo-aiga.svg" alt="">
+            <img src="./media/logo-kcc.svg" alt="">
+            <img src="./media/logo-jtb.svg" alt="">
+            <img src="./media/logo-asb.svg" alt="">
+            <img src="./media/logo-mobi.svg" alt="">
+            <img src="./media/logo-hot.svg" alt="">
         </div>
     </section>
 
 
+
+
+    <section id="about">
+        <div class="my">
+            <h2>ABOUT</h2>
+            <p></p>
+        </div>
+
+        <div class="lyft">
+            <div class="pics">
+                <img src="./media/chris-ota-profile-01.jpg" alt="">
+                <img src="./media/chris-ota-profile-02.jpg" alt="">
+                <img src="./media/chris-ota-profile-04.jpg" alt="">
+                <img src="./media/chris-ota-profile-03.jpg" alt="">
+            </div>
+            <div class="left mallDesign">
+                <div class="thick">
+                    <p>14 Years Ago...</p>
+                    <p>I graduated from <a href="college">Kapiolani Community College</a> with a degree in Interface
+                        Design
+                        and began my career working for different agencies in Hawaii.</p>
+                    <p>In 2015, I packed my bags and decided to move to San Francisco for a fresh start and to immerse
+                        myself in the world of design.</p>
+                    <p><strong>♠️ K-pop/k-dramas</strong></p>
+                    <p><strong>🏃 Runner, swimmer, snowboarder</strong>#runtoeat</p>
+                    <p><strong>⛩️ Japanese Japanophile </strong>いただきます</p>
+                    <p><strong>🌱 Plant parent </strong>Resisting the urge to overwater</p>
+                    <p><strong>🧹 All things Ghilbi</strong> How can you pick just one</p>
+
+                </div>
+            </div>
+        </div>
+        <div class="clock">
+            <p class="head">Clock created with only HTML and CSS</p>
+            <footer class="footerinClock">
+                <p>"Good design is long-lasting."</p>
+                <p class="line"></p>
+                <p>Dieter Rams</p>
+            </footer>
+        </div>
+    </section>
+
+
+    <section id="contact">
+        <div class="my">
+            <h2>CONTACT</h2>
+            <p></p>
+        </div>
+        <div class="links">
+            <a href="Email">Email</a>
+            <a href="Dribbble">Dribbble</a>
+            <a href="CodePen">CodePen</a>
+            <a href="LinkedIn">LinkedIn</a>
+            <a href="Twitter">Twitter</a>
+            <a href="Medium">Medium</a>
+        </div>
+
+        <footer class="pagefooter">
+            <div class="mediumTwitter">
+                <div class="mediumblogs">
+                    <h1>Medium Blogs</h1>
+                    <p>Favorites:</p>
+                    <div class="links">
+                        <a href="">How do I build a good mentor/mentee relationship?</a>
+                        <a href="">Streamlining performance reviews</a><a href="">Lessons For Aspiring Designers</a>
+                        <a href="">What Non-Designers Don’t Realize</a>
+                    </div>
+                </div>
+                <div class="twitter">
+                    <h1>Twitter</h1>
+                    <div class="links">
+                        <a href="">🫃 https://t.co/jedHzFffiK</a>
+                        <a href="">9 hours ago</a>
+                    </div>
+                </div>
+            </div>
+            <div class="background2"></div>
+
+            <div class="last">Coded with ♥. Copyright © 2022 Chris Ota.</div>
+        </footer>
+
+
+    </section>
 </body>
 
 <!-- https://www.otadesigns.com/ -->
