--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
                     <p>I was involved with creating user-experience documents (touchpoints, site audit, competitor
                         analysis, sitemaps, responsive wireframes, user personas, customer and stakeholder interviews)
                         and a mobile-first design approach.</p>
-                    <a href="#caseStudy">View Case Study</a>
+                    <a href="./mallRedesign.html">View Case Study</a>
                     <p>User Experience Documentation, Design, HTML/CSS, WordPress Integration</p>
                 </div>
-                <img src="./media/mall.jpg" alt="">
+                <a href="./mallRedesign.html" title="Go to mallDesign">
+                    <img src="./media/mall.jpg" alt=""></a>
             </div>
 
             <!--  -->
