--- a/mallRedesign.html
+++ b/mallRedesign.html
@@ -50,6 +50,205 @@
         <div class="textinfo">"This is the world's largest outdoor shopping center and Hawaii's premier shopping,
             entertainment, and dining destination with 290 stores, including nearly 70 dining options."</div>
     </section>
+
+    <section class="research">
+        <div class="researchtexts">
+            <h1>Brand Research</h1>
+            <p>Vision, Values, Touchpoints</p>
+            <p>We started the project by researching the company, brand values and vision, and gathering any type of
+                data
+                the client had from previous surveys. Below are a few highlights we discovered about our client:</p>
+            <ul>
+                <li><strong>Experience</strong> Visitors get to shop at the worlds largest outdoor mall in the nation,
+                    which
+                    takes advantage of Oahu's beautiful weather.</li>
+                <li><strong>Social Media </strong>Audiences will most likely get information through social media first
+                    because it is updated frequently and is the easiest to update.</li>
+                <li><strong>Going Mobile </strong>82% (2012 survey) of visitors to the mall do general shopping and
+                    browsing
+                    without a specific store in mind. By building a mobile-friendly website, we can assist a shopper's
+                    on-site discovery of different merchants and vendors or suggest mall specials they may have not
+                    previously known about.</li>
+                <li><strong>Reviews </strong>Since a vast majority of shoppers (~83% - 2012 survey) have an overall
+                    "good"
+                    or "excellent" shopping or dining experience, they are likely to write a positive review of the mall
+                    on
+                    Trip Advisor, Yelp, or other large websites.</li>
+            </ul>
+            <p>After understanding more about their business, we did a heuristic review of their current website and a
+                competitive analysis with other local and national brands.</p>
+        </div>
+        <img src="./media/mobile.png" alt="">
+    </section>
+
+    <section class="reviewstoreimg">
+        <div class="review">
+            <div class="reviewtext">
+                <h1>Heuristic Review</h1>
+                <p>Current Site</p>
+                <p>
+                    The website caters to a large audience, which include local, national, and international visitors.
+                    They
+                    offer a variety of promotions and events which are either store or mall specific. Below are some
+                    points
+                    we
+                    touched upon when comparing their web presence with other competitors:</p>
+            </div>
+            <div class="empty"></div>
+        </div>
+        <div class="review">
+            <div class="reviewtext pros">
+                <h1>Pros</h1>
+                <ul>
+                    <li>The brand is represented well in the design with floral patterns, attractive photography, and
+                        use of curves.</li>
+                    <li>Each page has a different color scheme, which keeps the site lively and interesting.</li>
+                </ul>
+                <h1>Cons</h1>
+                <ul>
+                    <li>Home page slideshow images transition automatically with no controls.</li>
+                    <li>Mall hours are low on the page.</li>
+                    <li>Side navigation is hidden and dominated by other sections.</li>
+                    <li>Body content and headings have poor hierarchy. Headings, sub-headings, and body text can be
+                        treated differently so they don't blend in with each other.</li>
+                    <li>Although active on social media, the site does not represent this.</li>
+                </ul>
+            </div>
+            <div class="empty">
+                <img src="./media/screen-blur-crop.png" alt="">
+                <figcaption>Home Page, October 2015</figcaption>
+            </div>
+        </div>
+
+        <div class="proposed">
+            <h1>Proposed Redesign</h1>
+            <img src="./media/mall-home.png" alt="">
+            <figcaption>Proposed Home Page</figcaption>
+            <p>The proposed redesign was focused on (but not limited to) several things: Quick access to the directory
+                map, mall hours, dynamic imagery, and easy to find updates.</p>
+        </div>
+    </section>
+
+
+    <section class="survey research">
+        <div class="insight researchtexts">
+            <h1>Customer Surveys</h1>
+            <p>Insights</p>
+            <p>Data from 800 shoppers were collected and we confirmed earlier assumptions about site visitors. Below are
+                some highlights:</p>
+            <ul>
+                <li><strong>Unclear messaging </strong>70% of users found the website content written in a clear and
+                    concise manner, but the other 30% answered that it wasn't. We needed to focus our efforts on content
+                    strategy to deliverer a clearer message to customers.</li>
+                <li><strong>Web Savvy</strong> 59% of users accessed the website via desktop/laptop and 25% on a smart
+                    phone. This validated that we needed to focus on a responsive site for a seamless experience.</li>
+                <li><strong>Social Media </strong> 69% people of surveyed were not aware of any social media presence by
+                    the mall and of those who knew, only 9% interacted on a social media network. We all discovered this
+                    to be a largely missed opportunity to interact with users and that more of an effort should be made
+                    in all of their channels.</li>
+                <li><strong>Parking </strong>71% of users felt parking was very important to an enjoyable shopping
+                    experience. This allowed us to focus on creating a map specifically for drivers marked with
+                    entrances, exits, parking areas, and valet parking options.</li>
+            </ul>
+        </div>
+
+        <div class="quote">
+            <h1>Quotes</h1>
+            <p>"A better map - it's so big I really need to know where I am going and where I should park (and how to
+                get to that parking section !)"</p>
+            <p>"Provide links to actual store websites where available. Maintain updated parking map showing closed off
+                areas and detours, Add retaurant [sic] menus.
+                "</p>
+            <p>" Its [sic] hard to click on certain things because I use my phone. Somethings are better if you had a
+                mouse."</p>
+        </div>
+    </section>
+    <section class="redesignsect">
+        <div class="proposed map">
+            <h1>Proposed Redesign</h1>
+            <img src="./media/mall-map.png" alt="">
+            <figcaption>Proposed Directory Page</figcaption>
+        </div>
+        <div class="review approach">
+            <div class="reviewtext">
+                <h1>Our Approach</h1>
+                <p>The website only offered a static map of shopping center. It was very tedious to update since there
+                    are multiple floors, hundreds of shops, and over a dozen restaurants. At the time, the mall was
+                    under construction and tenants were moving on a monthly basis which proved frustrating to visitors
+                    since maps weren't updated in a timely fashion.</p>
+                <p>
+                    We wanted to to integrate Google Maps for an interactive experience for any user using any type of
+                    device. Additionally, it would be easier for staff to update the map.</p>
+                <p>New and returning customers requested a detailed store page which highlights specials, specific store
+                    hours, amenities, featured brands, and other details. By providing more information, we all felt it
+                    would increase store traffic, especially if a store didn't have a personal website.</p>
+            </div>
+            <div class="empty"></div>
+        </div>
+
+        <div class="store proposed">
+            <img src="./media/mall-store.png" alt="">
+            <figcaption>Proposed Store Page</figcaption>
+        </div>
+    </section>
+
+    <section class="stakeholder survey research">
+        <div class="insight researchtexts">
+            <h1>Stakeholder Interviews</h1>
+            <p>Experience and Motivations</p>
+            <p>The most common and agreed upon pain point would be how the maps for the mall are displayed and this is
+                the first thing that should be improved upon when redoing the website.</p>
+            <p>Also, updates for the website go through a third party vendor, but they would like to change that work
+                flow so they have control over editing in a timelier fashion.</p>
+            <p>Other concerns they addressed included:</p>
+            <ul>
+                <li>Improve search functionality by adding product tags, brand name tags, autocorrect for misspellings,
+                    and include mall events.</li>
+                <li>Detailed event listings to engage customers. </li>
+                <li> Easier to update in-house.</li>
+                <li>Store owners can update their information without contacting marketing staff.</li>
+                <li>Consistent content and layout for all languages.</li>
+            </ul>
+            <h2>Our Approach</h2>
+            <p>We all felt that WordPress would be the best solution to maintain store data, allow the marketing team to
+                easily update information and post events, and easy management of localization. As designs were being
+                updated and approved, we began to develop the site to ensure all these asks could be met.</p>
+        </div>
+
+        <div class="quote interviewQ">
+            <h1>Quotes</h1>
+            <p>"It's a matter of how we describe where things are located in text and also visually if that's even
+                possible. Access to the property, that's a big challenge. We've got like what, eighteen entrances to the
+                property around you know? How do you tell people to come in?"</p>
+            <p>"If I was a traveler, I would want to know where all the locals shop. Where all the deals are."</p>
+        </div>
+    </section>
+    <div class="conclusion review approach">
+        <div class="reviewtext">
+            <h2>Conclusion</h2>
+            <p>Working very closely with the client during every step of the process helped them learn the proper
+                steps it takes to build a large-scale site out properly. The client was happy with our process,
+                survey findings, designs, and our ability to suggest solutions to their problems. Due to unforeseen
+                circumstances which were out of everyone's hands, the project was canceled during the start of
+                development and never launched.</p>
+        </div>
+        <div class="empty"></div>
+    </div>
+
+    <div class="contribution">
+        <p>Project Contribution</p>
+        <p><strong>Agency</strong> Ikayzo, Inc.</p>
+        <p><strong>Engagement</strong> July - November 2014</p>
+        <p><strong>Design</strong> Mockups</p>
+        <p><strong>Discovery</strong> Touchpoints, Audits, Interviews, Sitemap, Userflows, Personas, Wireframes</p>
+        <p><strong>Implementation</strong> Wordpress</p>
+        <div class="links">
+            <a href="./index.html">Return Home</a>
+        </div>
+    </div>
+    <div class="coded">
+        <p>Coded with ♥. Copyright © 2022 Chris Ota.</p>
+    </div>
 </body>
 
 </html>
