--- a/index.html
+++ b/index.html
@@ -95,13 +95,14 @@
 
 
             <div class="lyft mall">
-                <img src="./media/work-school.jpg" alt="">
+                <a href="./schoolkine.html">
+                    <img src="./media/work-school.jpg" alt=""></a>
                 <div class="left mallDesign">
                     <p>School Kine Cookies</p>
                     <p>School Kine Cookies was looking for a custom, backend dashboard system to help teachers manage
                         local cookie sales in Hawaii. After launching, there was a 98% adoption rate with a steady
                         increase of sales.</p>
-                    <a href="#caseStudy">View Case Study</a>
+                    <a href="./schoolkine.html">View Case Study</a>
                     <p>Wireframes, Design, HTML/CSS, Ruby on Rails, Shopify Integration</p>
                 </div>
             </div>
