--- a/schoolkine.html
+++ b/schoolkine.html
@@ -154,13 +154,13 @@
     <div class="contribution">
         <p>Project Contribution</p>
         <p><strong>Client</strong> School Kine Cookies</p>
-        <p><strong>Site</strong><a href="http://www.schoolkineonline.com/"> schoolkineonline.com</a></p>
+        <p><strong>Site</strong><a href="http://www.schoolkineonline.com/" target="_blank"> schoolkineonline.com</a></p>
         <p><strong>Agency</strong> Ikayzo, Inc</p>
         <p><strong>Engagement</strong> March - July 2014</p>
         <p><strong>Discovery</strong> Site Map, Userflows, Personas, Wireframes</p>
         <p><strong>Design</strong> Mockups</p>
         <p>
-            <stong>Implementation</stong>HTML, CSS, Foundation, Ruby on Rails, Shopify
+            <strong>Implementation</strong>HTML, CSS, Foundation, Ruby on Rails, Shopify
         </p>
         <div class="links">
             <a href="./index.html">Return Home</a>
@@ -170,6 +170,5 @@
         <p>Coded with ♥. Copyright © 2022 Chris Ota.</p>
     </div>
 </body>
-<!-- http://www.schoolkineonline.com/ -->
 
 </html>
