--- a/index.html
+++ b/index.html
@@ -116,10 +116,11 @@
                     <p>Headquartered in Chicago, Clearstream came to us looking for a custom dashboard reporting system.
                         Built from the ground up, I worked closely with engineers and stakeholders during many different
                         steps of the process..</p>
-                    <a href="#caseStudy">View Case Study</a>
+                    <a href="./clearstream.html">View Case Study</a>
                     <p>Design, HTML/CSS, Ruby on Rails</p>
                 </div>
-                <img src="./media/clearstream.jpg" alt="">
+                <a href="./clearstream.html">
+                    <img src="./media/clearstream.jpg" alt=""></a>
             </div>
 
             <!--  -->
@@ -152,7 +153,7 @@
                     <p>I like to test my front-end capabilities in CodePen from time to time. Whether it is illustrating
                         something in pure CSS or squashing an annoying visual bug, I enjoy the challenge in trying to
                         accomplish something new.</p>
-                    <a href="#caseStudy">View More</a>
+                    <a href="./codepen.html">View More</a>
                     <p>Various</p>
                 </div>
             </div>
